cambio db atlas

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 JWT_SECRET= miclavesecreta
 
-MONGODB_URI= mongodb://127.0.0.1:27017/GrandmaRecipes
+# MONGODB_URI= mongodb://127.0.0.1:27017/GrandmaRecipes
+
+MONGODB_URI= mongodb+srv://nicolasregina:TNaB9nOgIbp7O8Hn@grandmarecipescluster.uejgzud.mongodb.net/GrandmaRecipes?retryWrites=true&w=majority
